--- a/css/styles.css
+++ b/css/styles.css
@@ -16,18 +16,14 @@
 
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 .main-index {
     font-family: var(--main-font);
     color: var(--black-color);
-    text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
 .section-title {
     font-weight: 700;
     font-size: 36px;
@@ -40,6 +36,12 @@
 header {
     border-bottom: 1px;
     border-color: rgba(236, 236, 236, 1);
+    display: flex;
+}
+
+.container{
+    width: 1170px;
+    margin: 0 auto;
 }
 
 .logo{
@@ -70,6 +72,7 @@ header {
     letter-spacing: 0.02em;
     text-decoration: none;
     cursor: pointer;
+    color: var(--black-color);
 }
 
 .contact {
@@ -103,13 +106,13 @@ header {
 /* MAIN */
 .first-part{
     background-color: #2F303A;
+    text-align: center;
 }
 
 .businessh1{
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -155,6 +158,7 @@ header {
 }
 
 .img-what-we-do{
+    width: 370px;
 }
 
 .photo-of-the-participant{
