--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,14 @@
     /* OTHERS */
 
 }
-*{
-    outline: solid red;
-}
+
+/* *{
+    outline: 1px red solid;
+} */
+
 .main-index {
     font-family: var(--main-font);
     color: var(--black-color);
-    width: 1200px;
     margin: 0 auto;
 }
 
@@ -36,6 +37,7 @@ p{
 ul{
     padding-left: 0px;
     margin: 0;
+    list-style: none;
 }
 
 .section-title {
@@ -44,10 +46,13 @@ ul{
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
 }
 
 .section {
     padding: 94px 15px;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 .container{
@@ -57,12 +62,17 @@ ul{
 
 /* HEADER */
 header {
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
+}
+
+.container-header{
     border-bottom: 1px;
     border-color: rgba(236, 236, 236, 1);
     display: flex;
     margin: 0 auto;
     padding: 0 15px;
     align-items: center;
+    width: 1200px;
 }
 
 .logo{
@@ -141,6 +151,7 @@ header {
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+    min-width: 1200px;
 }
 
 .businessh1{
@@ -156,7 +167,7 @@ header {
 }
 
 .button{
-    padding: 10px 32px;
+    padding: 13px 32px;
     border: 0;
     background: var(--blue-color);
     border-radius: 4px;
@@ -251,20 +262,17 @@ footer{
     min-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+    margin: 0 auto;
+}
+
+.container-footer{
+    text-align: left;
+    width: 1170px;
+    margin: 0 auto;
 }
 
 .footer-logo{
     color: var(--white);
-}
-
-address{
-}
-
-.contacts-footer{
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    list-style-type: none;
 }
 
 .contact-footer{
@@ -290,11 +298,14 @@ address{
 }
 
 /* PORTFOLIO`S MAIN */
-.body-portfolio{
-}
 
 .filters{
     list-style-type: none;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    width: 611px;
+    margin-bottom: 50px;
 }
 
 .filter{
@@ -322,15 +333,39 @@ address{
     color: var(--white);
 }
 
+.projects{    
+    margin-block-start: 0;
+    margin-block-end: 0;
+    display:flex;
+    flex-wrap: wrap;
+}
+
 .project{
     list-style-type: none;
+    width: 370px;
+    margin: 0;
+    display: inline-block;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.project-title{
+    padding: 20px 24px;
+}
+
+.project:nth-child(3n){
+    margin-right: 0;
+}
+
+.project:nth-last-child(-n + 3){
+    margin-bottom: 0;
 }
 
 .project-image{
+    display: block;
     width: 370px;
-}
-
-.project-title{
+    margin: 0;
 }
 
 .project-name{
